--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h1 {
 .letter {
     transform-style: preserve-3d;
     opacity: 0;
-    animation: rotate 10s ease-in 1s 1 normal forwards;
+    animation: rotate 8s ease-in 1s 1 normal forwards;
     display: inline-block;
     color: black;
 }
@@ -61,19 +61,32 @@ h1 {
     color: purple;
 }
 
+.cat{
+    position: absolute;
+    width: 500rem;
+    top: 200rem;
+    opacity: 0;
+    animation: line 10s ease-in 1s 1 normal;
+    transform: translate(-50%, 0);
+}
+
+.cat img{
+    width: 100%;
+}
+
 @keyframes rotate {
     0% {
         transform: translateY(-90%) rotate(45deg);
-        opacity: 1;
+        opacity: 0;
     }
 
     10% {
         transform: rotate(145deg);
+        opacity: 1;
     }
 
     20% {
         transform: translateY(-60%) rotate(245deg);
-        opacity: 1;
     }
 
     30% {
@@ -82,22 +95,36 @@ h1 {
 
     40% {
         transform: rotate(75deg);
-        opacity: 0;
     }
-
+    
     50% {
         transform: rotate(270deg);
-    }
-
-    60% {
         opacity: 0;
     }
 
-    80% {
+    80%{
         opacity: 0;
     }
 
     100% {
         opacity: 1;
+    }
+}
+@keyframes line {
+    0%{
+        opacity: 0;
+    }
+    30%{
+        left: 0;
+    }
+    50%{
+        opacity: 0;
+    }
+    70%{
+        opacity: 1;
+    }
+    100%{
+        left: 100%;
+        opacity: 0;
     }
 }
